# zivid-halcon-samples

./: Capture.hdev  CaptureHDR.hdev  CaptureHDRCompleteSettings.hdev  CaptureHDRLoop.hdev  ConnectToSerialNumberCamera.hdev  QuerySettingsAndParameters.hdev  README.md  ReadPLY.hdev  SampleCapture.hdev  SampleCaptureHDR.hdev  SampleCaptureHDRCompleteSettings.hdev  SampleCaptureHDRLoop.hdev  SampleConnectToSerialNumberCamera.hdev  SampleQuerySettingsAndParameters.hdev  SampleReadPLY.hdev  SampleSurfaceMatchingCreateModel.hdev  SampleSurfaceMatchingCreateModelFromFile.hdev  SampleSurfaceMatchingFindModel.hdev  SampleSurfaceMatchingFindModelFromFile.hdev  SampleUpdateSettings.hdev  SurfaceMatchingCreateModel.hdev  SurfaceMatchingCreateModelFromFile.hdev  SurfaceMatchingFindModel.hdev  SurfaceMatchingFindModelFromFile.hdev  UpdateSettings.hdev
continuous-integration/linux/: lint.sh
settings/set1_json/: frame_02.json
settings/set3_json/: frame_01.json  frame_03.json
source/: CaptureHDR.hdev  SurfaceMatchingFindModel.hdev
source/Applications/Basic/FileFormats/: ReadPLY.hdev
source/Camera/Advanced/: CaptureHDRLoop.hdev
source/Camera/Basic/: Capture.hdev  CaptureHDR.hdev  CaptureHDRCompleteSettings.hdev  CaptureHDRLoop.hdev  CaptureSavePLY.hdev  CaptureWithSettingsFromJSON.hdev  CaptureWithSettingsFromYML.hdev  ConnectToSerialNumberCamera.hdev
source/Camera/Basic/C++Halcon/: CMakeLists.txt
source/Camera/Basic/C++Halcon/CaptureViaGenICam/: CaptureViaGenICam.cpp
source/Camera/Basic/C++Halcon/CaptureViaZivid/: CaptureViaZivid.cpp
source/Camera/InfoUtilOther/: QuerySettingsAndParameters.hdev  Warmup.hdev
source/Pringles can/: ObjectModel3D.om3
source/Procedures/: calc_calplate_pose_eye_in_hand.hdvp  calc_calplate_pose_eye_to_hand.hdvp  generate_R_G_B_and_RGB_images.hdvp  get_first_available_zivid_device.hdvp  get_settings_for_zivid_camera_model.hdvp  get_zivid_camera_width.hdvp  get_zivid_model_folder_name.hdvp  get_zivid_preset_file.hdvp  get_zivid_sample_data_dir.hdvp  read_zivid_json_params.hdvp
source/SampleUtils/: convert_intrinsics_opencv_to_halcon.py  yaml_settings_to_json.py
source/cpp/: CMakeLists.txt  README.md
source/cpp/Camera/Basic/CaptureViaGenICam/: CaptureViaGenICam.cpp
source/cpp/Camera/Basic/CaptureViaZivid/: CaptureViaZivid.cpp
source/hdev/Procedures/: get_first_available_zivid_device.hdvp  get_zivid_sample_data_dir.hdvp
source/python/: convert_intrinsics_opencv_to_halcon.py
source/settings/set1_json/: frame_01.json
(+36 files in other folders)
